--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,19 @@
   "manifest_version": 3,
   "name": "LinkedIn Profile Picture Changer",
   "version": "1.0",
-  "description": "Firefox extension to change profile pictures on LinkedIn posts.",
-  "permissions": ["activeTab"],
+  "description": "Chrome extension to change profile pictures on LinkedIn posts.",
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
+  "host_permissions": [
+    "https://www.linkedin.com/"
+  ],
   "content_scripts": [
     {
-      "matches": ["*://*.linkedin.com/*"],
-      "js": ["contentScript.js"],
-      "run_at": "document_idle"
+      "matches": ["https://www.linkedin.com/*"],
+      "js": ["contentScript.js"]
     }
-  ],
-  "action": {
-    "default_icon": {
-      "48": "icon.png"
-    }
-  }
+  ]
+ 
 }
